✨ feat: add experience link

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -24,7 +24,7 @@ const jobs = [
 // TODO: add internationalization to Experience section
 ---
 
-<section>
+<section id="experience">
 	<header class="reveal pb-2">
 		<Subtitle left>Experience</Subtitle>
 	</header>
