--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -25,7 +25,7 @@ const jobs = [
 ---
 
 <section id="experience">
-	<header class="reveal my-6 mb-2">
+	<header class="reveal my-7 mb-2 pt-2">
 		<Subtitle left>Experience</Subtitle>
 	</header>
 	<!-- TODO:align experience bar with home icon responsive -->
@@ -34,12 +34,14 @@ const jobs = [
 	>
 		{
 			jobs.map((job) => (
-				<li class="mb-5 ms-4">
-					<div class="absolute -start-1.5 mt-1.5 h-3 w-3 rounded-full border border-teal-200 bg-teal-200" />
-					<time class="reveal-experience mb-1 text-sm font-normal leading-none text-teal-200">
-						{job.date}
-					</time>
-					<h3 class="reveal text-base font-semibold text-slate-50">
+				<li class="mb-7 ms-4">
+					<div class="flex flex-row items-center">
+						<div class="absolute -start-1.5 h-3 w-3 rounded-full border border-teal-200 bg-teal-200" />
+						<time class="mb-1 text-sm font-normal leading-none text-teal-200">
+							{job.date}
+						</time>
+					</div>
+					<h3 class="reveal my-1.5 text-base font-semibold text-slate-50">
 						{job.ocupation}
 					</h3>
 					<p class="reveal mb-2.5 text-sm font-normal text-[var(--default-font-color3)] ">
