--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,4 +1,5 @@
 ---
+import SectionContainer from './shared/SectionContainer.astro';
 import Subtitle from './shared/Subtitle.astro';
 
 export interface Props {
@@ -14,7 +15,7 @@ type Experience = {
 const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 ---
 
-<section id="experience">
+<SectionContainer id="experience">
 	<header class="reveal my-6 mb-2 pt-2">
 		<Subtitle left>{HEADER_EXPERIENCE}</Subtitle>
 	</header>
@@ -40,4 +41,4 @@ const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 			))
 		}
 	</ol>
-</section>
+</SectionContainer>
