--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -58,7 +58,7 @@ const {
 		class="h-60 bg-[#453662c5] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-64 max-md:h-60 max-sm:h-60 [&>*:first-child]:hover:scale-110 max-sm:[&>*:first-child]:hover:scale-105"
 	>
 		<article
-			class="even-child m-0 flex h-full w-11/12 flex-col items-start justify-end p-4 transition-[transform] duration-300 max-sm:w-full max-sm:justify-evenly max-sm:px-3 max-sm:py-3"
+			class="even-child m-0 flex h-full w-11/12 flex-col items-start justify-end p-5 transition-[transform] duration-300 max-sm:w-full max-sm:justify-evenly max-sm:p-4 max-sm:px-3 max-sm:py-3"
 		>
 			<header
 				class="m-1 text-3xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
