📃 docs: Update TODOs

--- a/src/components/Header/LocaleSelector.astro
+++ b/src/components/Header/LocaleSelector.astro
@@ -1,4 +1,5 @@
 ---
+//TODO: Add flags to locales
 import LocaleSelectorLink from './LocaleSelectorLink.astro';
 export interface Props {
 	SPANISH: string;
