--- a/src/components/Header/LocaleSelector.astro
+++ b/src/components/Header/LocaleSelector.astro
@@ -26,7 +26,7 @@ const CURRENT_LANGUAGE = currentLocale === 'es' ? SPANISH : ENGLISH;
 <button
 	id={id}
 	data-dropdown-toggle={dropdown_id}
-	class="inline-flex h-auto items-center rounded-md bg-transparent px-2 text-center font-lato text-[var(--default-font-color2)] transition-all duration-200 ease-in-out hover:text-teal-300 focus:outline-none focus:ring-4 focus:ring-[--default-secundary-font-color-2] focus:drop-shadow-[0rem_0rem_0.3rem_aqua] max-sm:text-xl"
+	class="inline-flex h-auto items-center rounded-md bg-transparent px-2 text-center font-lato text-sm text-[var(--default-font-color2)] transition-all duration-200 ease-in-out hover:text-teal-300 focus:outline-none focus:ring-4 focus:ring-[--default-secundary-font-color-2] focus:drop-shadow-[0rem_0rem_0.3rem_aqua] max-sm:text-xl"
 	type="button"
 	>{CURRENT_LANGUAGE}
 	<svg
