📃 docs: update TODOs

--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -37,7 +37,7 @@ type Project = {
 	website?: string;
 	tags: TAG[];
 };
-
+// TODO: create typescipt tag
 const TAGS = {
 	ASTRO: {
 		name: 'Astro',
@@ -70,7 +70,7 @@ const { PROJECTS_TITLE, PROJECTS_TITLE_AFTER_BR, PROYECTS } = Astro.props;
 const projects = [
 	{
 		id: 'vue-fluid-dnd',
-		title: 'VueFluidDnD',
+		title: 'vue-fluid-dnd',
 		githubLink: 'https://github.com/carlosjorger/vue-fluid-dnd/',
 		imageSrc: '[&.visibleImg]:bg-vuefluiddnd',
 		website: 'https://vue-fluid-dnd.netlify.app/',
