📃 docs: update TODOs

--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -37,7 +37,7 @@ type Project = {
 	website?: string;
 	tags: TAG[];
 };
-
+// TODO: create typescipt tag
 const TAGS = {
 	ASTRO: {
 		name: 'Astro',
