✨ feat: change projects info

--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -70,7 +70,7 @@ const { PROJECTS_TITLE, PROJECTS_TITLE_AFTER_BR, PROYECTS } = Astro.props;
 const projects = [
 	{
 		id: 'vue-fluid-dnd',
-		title: 'vue-fluid-dnd',
+		title: 'Vue Fluid DnD',
 		githubLink: 'https://github.com/carlosjorger/vue-fluid-dnd/',
 		imageSrc: '[&.visibleImg]:bg-vuefluiddnd',
 		website: 'https://vue-fluid-dnd.netlify.app/',
