--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { SEO_LANG, SEO_LOCALE, SEO_TITLE, SEO_DESCRIPTION } = Astro.props;
 		<meta name="description" content={SEO_DESCRIPTION} />
 		<meta
 			name="keywords"
-			content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page"
+			content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page,Cuvimaker,Rusty Copier,Vue Fluid DnD"
 		/>
 		<meta name="author" content="carlosjorger" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
