--- a/src/components/icons/IconLanguage.astro
+++ b/src/components/icons/IconLanguage.astro
@@ -1,7 +1,12 @@
+---
+export interface Props {
+	class?: string;
+}
+---
+
 <svg
+	class:list={Astro.props.class}
 	xmlns="http://www.w3.org/2000/svg"
-	width="24"
-	height="24"
 	viewBox="0 0 24 24"
 	fill="none"
 	stroke="currentColor"
