--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -53,72 +53,77 @@ const {
 </script>
 <article
 	id={id}
-	class:list={[imageSrc, Astro.props.class]}
-	class="reveal lazy-background flex flex-col overflow-hidden rounded-2xl border-4 border-solid border-[var(--default-secundary-font-color-2)] bg-[#322644] bg-placeholder bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black max-sm:mb-6 max-sm:mt-8 max-sm:self-center"
+	class:list={[Astro.props.class]}
+	class="overflow-hidden rounded-2xl border-4 border-solid border-[var(--default-secundary-font-color-2)] bg-[#322644] font-lato shadow-lg shadow-black max-sm:self-center"
 >
 	<div
-		class="h-full bg-[#453662c5] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 max-lg:h-64 max-md:h-60 max-sm:h-60 [&>*:first-child]:hover:scale-110 max-sm:[&>*:first-child]:hover:scale-105"
+		class:list={[imageSrc]}
+		class="reveal lazy-background flex h-full flex-col overflow-hidden bg-placeholder bg-cover bg-center bg-no-repeat font-lato shadow-lg shadow-black hover:scale-110 max-sm:self-center"
 	>
-		<article
-			class="m-0 flex h-full w-11/12 flex-col items-start justify-between p-4 transition-[transform] duration-300 max-sm:w-full max-sm:justify-evenly max-sm:p-4 max-sm:px-3 max-sm:py-3"
+		<div
+			class="h-full bg-[#453662c5] p-1 backdrop-brightness-[0.4] backdrop-grayscale transition-all duration-300 ease-in-out hover:bg-teal-600/0 hover:backdrop-grayscale-0 [&>*:first-child]:hover:scale-110 max-sm:[&>*:first-child]:hover:scale-105"
 		>
-			<header
-				class="m-1 text-xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
+			<article
+				class="m-0 flex h-full w-11/12 flex-col items-start justify-between p-4 transition-[transform] duration-300 max-sm:w-full max-sm:justify-evenly max-sm:p-4 max-sm:px-3 max-sm:py-3"
 			>
-				<h3 class="m-0 drop-shadow-[0_15px_20px_black]">
-					{title}
-				</h3>
-			</header>
-			<div
-				class="m-1 pb-0 text-xs text-[#99F9F9] drop-shadow-[0_15px_20px_black]"
-			>
-				<CustomParagraph
-					textColor="text-slate-50"
-					fontSize="text-sm"
-					set:html={description}
-				/>
-			</div>
-			<div
-				class:list={Astro.props.tagsClass}
-				class="flex w-full justify-between gap-2"
-			>
-				<ul class="flex flex-row gap-x-1">
-					{
-						tags.map((tag) => (
-							<li>
-								<span
-									class="flex items-center gap-x-0.5 rounded-xl border-2 p-1.5 px-1 text-[0.65rem] drop-shadow-[0_15px_20px_black]"
-									class:list={[tag.class]}
-								>
-									<tag.icon class="size-2.5" />
-									<label>{tag.name}</label>
-								</span>
-							</li>
-						))
-					}
-				</ul>
-				<div class="flex flex-row self-start">
-					<IconLinkContainer
-						class="h-6 w-6"
-						href={githubLink}
-						title={anchorLabel}
-					>
-						<IconGithub />
-					</IconLinkContainer>
-
-					{
-						website !== undefined && (
-							<IconLinkContainer
-								class="h-6 w-6"
-								href={website}
-								title={anchorLabel}
-							>
-								<IconLink />
-							</IconLinkContainer>
-						)
-					}
+				<header
+					class="m-1 text-xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
+				>
+					<h3 class="m-0 drop-shadow-[0_15px_20px_black]">
+						{title}
+					</h3>
+				</header>
+				<div
+					class="m-1 pb-0 text-xs text-[#99F9F9] drop-shadow-[0_15px_20px_black]"
+				>
+					<CustomParagraph
+						textColor="text-slate-50"
+						fontSize="text-sm"
+						set:html={description}
+					/>
 				</div>
-			</div>
-		</article>
+				<div
+					class:list={Astro.props.tagsClass}
+					class="flex w-full justify-between gap-2"
+				>
+					<ul class="flex flex-row gap-x-1">
+						{
+							tags.map((tag) => (
+								<li>
+									<span
+										class="flex items-center gap-x-0.5 rounded-xl border-2 p-1.5 px-1 text-[0.65rem] drop-shadow-[0_15px_20px_black]"
+										class:list={[tag.class]}
+									>
+										<tag.icon class="size-2.5" />
+										<label>{tag.name}</label>
+									</span>
+								</li>
+							))
+						}
+					</ul>
+					<div class="flex flex-row self-start">
+						<IconLinkContainer
+							class="h-6 w-6"
+							href={githubLink}
+							title={anchorLabel}
+						>
+							<IconGithub />
+						</IconLinkContainer>
+
+						{
+							website !== undefined && (
+								<IconLinkContainer
+									class="h-6 w-6"
+									href={website}
+									title={anchorLabel}
+								>
+									<IconLink />
+								</IconLinkContainer>
+							)
+						}
+					</div>
+				</div>
+			</article>
+		</div>
 	</div>
 </article>
