✨ feat: change reveal animation on experience

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -44,6 +44,11 @@ a {
 	animation-timeline: view();
 	animation-range: entry 10% cover 20%;
 }
+.reveal-experience-info {
+	animation: reveal-animation ease-in both;
+	animation-timeline: view();
+	animation-range: entry 20% cover 20%;
+}
 @keyframes reveal-animation {
 	from {
 		opacity: 0;
