--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -25,7 +25,7 @@ const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 	>
 		{
 			EXPERIENCE.map((job) => (
-				<li class="mb-14 ms-5">
+				<li class=" mb-20 ms-5">
 					<div class="flex flex-row items-center">
 						<div class="absolute start-[-0.9rem] mb-1 h-7 w-7 overflow-hidden rounded-full border border-teal-200 bg-slate-300 shadow-lg shadow-teal-200">
 							<img src={`/images/${job.logoFile}`} alt="" />
@@ -34,10 +34,10 @@ const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 							{job.date}
 						</time>
 					</div>
-					<h3 class="reveal my-0.5 text-base font-semibold text-teal-200">
+					<h3 class="reveal-experience-info my-0.5 text-base font-semibold text-teal-200">
 						{job.ocupation}
 					</h3>
-					<p class="reveal mb-2.5 text-sm font-normal text-[var(--default-font-color)]">
+					<p class="reveal-experience-info mb-2.5 text-sm font-normal text-[var(--default-font-color)]">
 						{job.description}
 					</p>
 				</li>
